--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -1,3 +1,4 @@
+{% if page.use_math %}
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     TeX: {
@@ -13,5 +14,14 @@
   });
 </script>
 <script type="text/javascript"
+        charset="utf-8"
         src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
+<script
+    type=text/javascript"
+    charset="utf-8"
+    src="https://vincenttam.github.io/javascripts/MathJaxLocal.js"
+    >
+
+</script>
+{% endif %}
