--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,16 @@
+<meta charset="utf-8">
+
+{% include seo.html %}
+
+<link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+
+<!-- http://t.co/dKP3o1e -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<script>
+  document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
+</script>
+
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script>
         MathJax.Hub.Config({
@@ -23,3 +36,32 @@
             showProcessingMessages: false
         });
 </script>
+
+<!-- For all browsers -->
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+
+<!--[if lte IE 9]>
+<style>
+    /* old IE unsupported flexbox fixes */
+    .greedy-nav .site-title {
+      padding-right: 3em;
+    }
+    .greedy-nav button {
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+    }
+  </style>
+<![endif]-->
+
+{% if site.head_scripts %}
+{% for script in site.head_scripts %}
+{% if script contains "://" %}
+{% capture script_path %}{{ script }}{% endcapture %}
+{% else %}
+{% capture script_path %}{{ script | relative_url }}{% endcapture %}
+{% endif %}
+<script src="{{ script_path }}"></script>
+{% endfor %}
+{% endif %}
